--- a/src/app/shared/components/case-component/case-component.html
+++ b/src/app/shared/components/case-component/case-component.html
@@ -11,7 +11,7 @@
       <app-edit-imperfect
         [sendDown]="word.case"
         (sendUp)="onSendUp($event)"
-        [partOfSpeech]="word.partOfSpeech"
+        [word]="word"
       />
       <!-- <app-edit-imperfect
         [sendDown]="this.receivedCase"
