--- a/src/app/shared/components/sidenav/sidenav.html
+++ b/src/app/shared/components/sidenav/sidenav.html
@@ -9,9 +9,21 @@
       </p>
       <app-word-builder />
     </div>
-    <!-- <button (click)="changeToken('de')">DE</button>
-    <button (click)="changeToken('uk')">YK</button>
-    <button (click)="changeTarget()">HEY</button> -->
+    <section class="targets">
+      <!-- <div>
+        <button (click)="changeToken('de')">from DE</button>
+        <button (click)="changeToken('uk')">from YK</button>
+      </div>
+      <div>
+        <button (click)="changeTarget('de')">to DE</button>
+        <button (click)="changeTarget('en')">to EN</button>
+        <button (click)="changeTarget('uk')">to YK</button>
+      </div> -->
+      <app-lang-direction
+        (fromLanguage)="fromLanguage($event)"
+        (toLanguage)="toLanguage($event)"
+      />
+    </section>
   </mat-drawer>
 
   <div class="right-drawer">
