--- a/src/app/shared/components/top-form/top-form.html
+++ b/src/app/shared/components/top-form/top-form.html
@@ -1,5 +1,5 @@
-@if (this.vals$| async ) {} @if (this.input$| async ) {}
-
+@if (this.vals$| async ) {} @if (this.input$| async ) {} @if (this.changes$|
+async ) {}
 <section class="top-form">
   <form
     [formGroup]="manualForm"
