added delete, switched to page change instead of scan

--- a/src/app/modules/word-builder/word-builder.html
+++ b/src/app/modules/word-builder/word-builder.html
@@ -24,6 +24,15 @@
     >
       Reset
     </button>
+    <button
+      class="word-builder__save-button-row--button"
+      (click)="this.deleteWord()"
+      matButton="filled"
+      color="secondary"
+      [hidden]="!this.deleteVisible"
+    >
+      Delete
+    </button>
   </div>
 </div>
 
