--- a/src/app/shared/components/basic-quiz/basic-quiz.scss
+++ b/src/app/shared/components/basic-quiz/basic-quiz.scss
@@ -2,7 +2,6 @@
   padding: 1rem;
 }
 .caseBlock {
-  // transform: translateY(-20vh);
   overflow-y: auto;
   width: 90vw;
   max-height: 20vh;
@@ -28,15 +27,11 @@
   color: #a0a0a0;
 }
 .titleBlockWhileSmall {
-  font-size: larger;
+  font-size: large;
 }
 .titleBlock {
-  // padding: 1rem;
-
   font-size: x-large;
-  // position: absolute;
-  // left: 21.5px;
-  // top: 30vh;
+
   &__titleText:hover {
     cursor: pointer;
     color: greenyellow;
@@ -46,18 +41,7 @@
   min-height: 1vh;
   color: black;
 }
-// .titleBlock {
-//   padding: 1rem;
-//   position: absolute;
-//   left: 1.5vw;
-//   bottom: 8vh;
-// &__titleText:hover {
-//   cursor: pointer;
-//   color: greenyellow;
-// }
-// }
 
-//========
 .tenseStyle {
   color: #a0a0a0;
   font-size: x-small;
@@ -66,40 +50,33 @@
   color: white;
   font-size: small;
 }
-@media only screen and (min-width: 600px) {
-  .titleBlock {
-    font-size: large;
-    position: absolute;
-    left: 40px;
-    top: 30vh;
-    &__titleText:hover {
-      cursor: pointer;
-      color: greenyellow;
-    }
-  }
-}
+// @media only screen and (min-width: 600px) {
+//   .titleBlock {
+//     font-size: x-large;
 
-@media only screen and (min-width: 768px) {
-  .titleBlock {
-    // font-size: large;
-    // position: absolute;
-    // left: 50px;
-    // top: 30vh;
-    &__titleText:hover {
-      cursor: pointer;
-      color: greenyellow;
-    }
-  }
-  @media only screen and (min-width: 992px) {
-    .titleBlock {
-      // font-size: large;
-      // position: absolute;
-      // left: 60px;
-      // top: 30vh;
-      &__titleText:hover {
-        cursor: pointer;
-        color: greenyellow;
-      }
-    }
-  }
-}
+//     &__titleText:hover {
+//       cursor: pointer;
+//       color: greenyellow;
+//     }
+//   }
+// }
+
+// @media only screen and (min-width: 768px) {
+//   .titleBlock {
+//     font-size: x-large;
+
+//     &__titleText:hover {
+//       cursor: pointer;
+//       color: greenyellow;
+//     }
+//   }
+//   @media only screen and (min-width: 992px) {
+//     .titleBlock {
+
+//       &__titleText:hover {
+//         cursor: pointer;
+//         color: greenyellow;
+//       }
+//     }
+//   }
+// }
