--- a/src/app/shared/components/display-box/display-box.html
+++ b/src/app/shared/components/display-box/display-box.html
@@ -1,5 +1,5 @@
 @if (this.output$ |async; as newDefs) {
-<div class="display-container">
+<div>
   <app-extra-block #xtra1 [newDefs]="newDefs" [type]="this.def" />
   <app-extra-block #xtra2 [newDefs]="newDefs" [type]="this.exmp" />
 </div>
