--- a/src/app/shared/components/edit-imperfect/edit-imperfect.html
+++ b/src/app/shared/components/edit-imperfect/edit-imperfect.html
@@ -1,4 +1,4 @@
-<div (focusout)="sendToCaseComponent()" class="imperfect-container">
+<div (focusout)="sendToCaseComponent()">
   <form [formGroup]="imperfectForm">
     <div formArrayName="formArray">
       @for (group of this.keysForForm; track group; let index = $index) {
