--- a/src/app/shared/components/case-component/case-component.scss
+++ b/src/app/shared/components/case-component/case-component.scss
@@ -1,4 +1,4 @@
-.case-container {
-  // padding-left: 1rem;
-  // padding-right: 1rem;
+.case-drop-list {
+  display: flex;
+  justify-content: center;
 }
