--- a/src/app/shared/components/extra-block/extra-block.html
+++ b/src/app/shared/components/extra-block/extra-block.html
@@ -1,6 +1,4 @@
 <div>
-  @if (this.defToEdit$ | async; as newDefs ) {
-  <!-- @if (this.defToEdit$ | async; as newDefs ) { -->
   <mat-expansion-panel #expansionPanel>
     <mat-expansion-panel-header>
       <mat-panel-title>{{ this.type() | titlecase }}</mat-panel-title>
@@ -13,17 +11,11 @@
       "
     />
   </mat-expansion-panel>
-  <!-- <app-definition-edit
-      [type]="this.type()"
-      [definitions]="this.sfactory.getRelevantExtraBlock(newDefs, this.type())"
-    />
-  </mat-expansion-panel> -->
 
   <app-drag-drop
     [type]="this.type()"
-    [items]="this.sfactory.getRelevantExtraBlock(newDefs, this.type())"
+    [items]="this.sfactory.getRelevantExtraBlock(this.newDefs(), this.type())"
   />
-  }
   <div>
     <mat-accordion multi> </mat-accordion>
   </div>
