--- a/src/app/shared/components/search-ahead/search-ahead.scss
+++ b/src/app/shared/components/search-ahead/search-ahead.scss
@@ -1,23 +1,16 @@
-.search-ahead {
-  // background-color: red;
-}
+// .search-ahead {
+// background-color: red;
+// }
 
-.search-ahead__field {
-  // position: absolute;
-  // width: 20;
-}
-.search-ahead__word-container {
-  // position: fixed;
-  // transform: translateX(3rem);
-  // width: 30rem;
+// .search-ahead__field {
+// position: absolute;
+// width: 20;
+// }
+.word-container {
   overflow-y: auto;
   height: 30vh;
-  // transform: translateX(0.5rem);
-  // width: 22rem;
-  // overflow-y: auto;
-  // height: 30vh;
-}
-
-.ind {
-  // padding: 1rem;
+  &__titleText:hover {
+    cursor: pointer;
+    color: greenyellow;
+  }
 }
