--- a/src/app/shared/components/sidenav/sidenav.html
+++ b/src/app/shared/components/sidenav/sidenav.html
@@ -2,10 +2,7 @@
   <mat-drawer #drawer mode="over">
     <div class="left-drawer">
       <p class="left-toggle-mover">
-        <i
-          (click)="drawer.toggle()"
-          class="left-drawer__toggle-button left"
-        ></i>
+        <i (click)="drawerToggle()" class="left-drawer__toggle-button left"></i>
       </p>
       <app-word-builder />
     </div>
