added translation for each def, fixed again

--- a/src/app/modules/word-builder/word-builder.html
+++ b/src/app/modules/word-builder/word-builder.html
@@ -29,7 +29,7 @@
       (click)="this.deleteWord()"
       matButton="filled"
       color="secondary"
-      [hidden]="!this.deleteVisible"
+      [hidden]="!this.deleteButtonVisible"
     >
       Delete
     </button>
