def edit button width on phone screen

--- a/src/app/shared/components/definition-edit/definition-edit.html
+++ b/src/app/shared/components/definition-edit/definition-edit.html
@@ -13,7 +13,7 @@
         />
       </mat-form-field>
       <app-translate-modal-g
-        (mouseup)="this.toEdit()"
+        (сlick)="this.toEdit()"
         [inputForTranslate]="{
           definition: this.formArray.at(index).value.definition,
           index,
