--- a/src/app/shared/components/sidenav/sidenav.scss
+++ b/src/app/shared/components/sidenav/sidenav.scss
@@ -35,6 +35,9 @@
       padding: 9px;
       border-color: #a0a0a0;
     }
+    &__logout-button {
+      background-color: black;
+    }
   }
 }
 .right {
